--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Revathi Putrevu
 #logo: 
 #description: text below image
 #show_downloads: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-tactile
